completed exercise 1 and started working on exercise 2

--- a/src/Exercise-1/week-3/025.ipynb
+++ b/src/Exercise-1/week-3/025.ipynb
@@ -52,7 +52,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import time\n",
+    "import math\n",
+    "print(\"Enter the year\")\n",
+    "y = int(input())\n"
+   ]
   }
  ],
  "metadata": {
