--- a/src/Exercise-1/week-3/027.ipynb
+++ b/src/Exercise-1/week-3/027.ipynb
@@ -40,7 +40,15 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import math\n",
+    "print('Enter air temperature')\n",
+    "t = int(input())\n",
+    "print('Enter wind speed')\n",
+    "w = int(input())\n",
+    "print(13.12+0.6215*t-11.37*pow(w,0.16)+0.3965*pow(w,0.16))\n",
+    "print('The number above is the WCI(wind chill index) from the number you gave')\n"
+   ]
   }
  ],
  "metadata": {
