--- a/src/Exercise-1/week-2/019.ipynb
+++ b/src/Exercise-1/week-2/019.ipynb
@@ -23,15 +23,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the length of the base\n",
+      "Enter the height of the triangle:\n",
+      "The area of your triangle is\n",
+      "2.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "print('Enter the length of the base')\n",
+    "b = int(input())\n",
+    "print('Enter the height of the triangle:')\n",
+    "h = int(input())\n",
+    "print('The area of your triangle is')\n",
+    "print(b*h/2)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Pywb",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
