--- a/src/Exercise-1/week-3/021.ipynb
+++ b/src/Exercise-1/week-3/021.ipynb
@@ -28,15 +28,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the length of a side: \n",
+      "Enter the number of sides: \n",
+      "The area of your polygon is\n",
+      "143.99999999999997\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "print('Enter the length of a side: ')\n",
+    "s = int(input())\n",
+    "print('Enter the number of sides: ')\n",
+    "n = int(input())\n",
+    "print('The area of your polygon is')\n",
+    "print(n*s*s/4*math.tan(math.pi/n))"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Pywb",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
