--- a/src/Exercise-1/week-3/026.ipynb
+++ b/src/Exercise-1/week-3/026.ipynb
@@ -37,15 +37,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter Your Height in meters \n",
+      "Enter Your Weight in inches\n",
+      "90.0\n",
+      "Above is BMI(Body Mass Index)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "print(\"Enter Your Height in meters \")\n",
+    "h = int(input())\n",
+    "print(\"Enter Your Weight in inches\")\n",
+    "w = int(input())\n",
+    "print(w/h*h)\n",
+    "print(\"Above is BMI(Body Mass Index)\")\n"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Pywb",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
