Done with 11 problems

--- a/src/Exercise-2/week-4/046.ipynb
+++ b/src/Exercise-2/week-4/046.ipynb
@@ -43,7 +43,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "print('Enter your birthday month:')\n",
+    "b = str(input())\n",
+    "print('Enter your birthday date:')\n",
+    "d = int(input())\n"
+   ]
   }
  ],
  "metadata": {
