--- a/src/Exercise-2/week-4/038.ipynb
+++ b/src/Exercise-2/week-4/038.ipynb
@@ -43,15 +43,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter a Decibel level:\n",
+      "Your room is as loud as a jackhammer\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Enter a Decibel level:')\n",
+    "d = int(input())\n",
+    "Jackhammer = 130\n",
+    "GasLawnmower = 106\n",
+    "AlarmClock = 70\n",
+    "QuietRoom = 40\n",
+    "if d == Jackhammer:\n",
+    "    print('Your room is as loud as a jackhammer')\n",
+    "if d == GasLawnmower:\n",
+    "    print('Your room is as loud as a Gas Lawnmover')\n",
+    "if d == AlarmClock:\n",
+    "    print('Your room is as louad as a Alarm Clock')\n",
+    "if d == QuietRoom:\n",
+    "    print('Your room is as loud as a Quiet room')"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Pywb",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
