--- a/src/Exercise-2/week-4/042.ipynb
+++ b/src/Exercise-2/week-4/042.ipynb
@@ -46,15 +46,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter the amount of banknote:\n",
+      "Your banknote has Alexander Hamilton on it \n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Enter the amount of banknote:')\n",
+    "b = int(input())\n",
+    "if b == 1:\n",
+    "    print('Your banknote has George Washington on it ')\n",
+    "if b == 2:\n",
+    "    print('Your banknote has Thomas Jefferson on it ')\n",
+    "if b == 5:\n",
+    "    print('Your banknote has Abraham Lincoln on it ')\n",
+    "if b == 10:\n",
+    "    print('Your banknote has Alexander Hamilton on it ')\n",
+    "if b == 20:\n",
+    "    print('Your banknote has Andrew Jackson on it ')\n",
+    "if b == 50:\n",
+    "    print('Your banknote has Ulysses S. Grant on it ')\n",
+    "if b == 100:\n",
+    "    print('Your banknote has Benjamin Franklin on it ')\n",
+    "    "
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Pywb",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
