--- a/src/Exercise-2/week-4/045.ipynb
+++ b/src/Exercise-2/week-4/045.ipynb
@@ -34,15 +34,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Enter month:\n",
+      "Enter day:\n",
+      "The season is spring\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('Enter month:')\n",
+    "m = str(input())\n",
+    "print('Enter day:')\n",
+    "d = int(input())\n",
+    "if m.lower() == \"january\" or  m == \"december\" or m == \"febuary\":\n",
+    "    season = 'winter'\n",
+    "elif m.lower() == \"october\" or m == \"september\" or m == \"november\":\n",
+    "    season = 'fall'\n",
+    "elif m.lower() == \"march\" or m == \"april\" or m == \"may\":\n",
+    "    season = 'spring'\n",
+    "elif m.lower() == \"june\" or m == \"july\" or m == \"august\":\n",
+    "    season = 'summer'\n",
+    "if m == \"march\":\n",
+    "    if d < 20:\n",
+    "        season = 'winter'\n",
+    "if m == \"june\":\n",
+    "    if d < 21:\n",
+    "        season = 'spring'\n",
+    "if m == \"winter\":\n",
+    "    if d < 21:\n",
+    "        season = 'fall'\n",
+    "if m == \"fall\":\n",
+    "    if d < 22:\n",
+    "         season = 'summer'\n",
+    "print(\"The season is\", season)"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Pywb",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.18"
   }
  },
  "nbformat": 4,
